test/data/semantic/bad/reserved_name_match.coy
enum E {
    A(i64),
    B()
}

fn main() -> () {
    let e = E::B();

    match e {
        E::A(const) => (),
        E::B() => ()
    }
}
